# canastra

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  conftest.py  deck.py  helpers.py  main.py  player.py  pyproject.toml  requirements-dev.txt  requirements.txt  table.py  test.deck.py  test.helpers.py  test_deck.py
.github/workflows/: ci.yml
canastra/: __init__.py  __main__.py
canastra/cli/: __init__.py  loop.py  prompts.py  render.py  setup.py
canastra/domain/: __init__.py  cards.py  rules.py  scoring.py
canastra/engine/: __init__.py  actions.py  engine.py  errors.py  events.py  scoring.py  setup.py  state.py  timer.py
canastra/web/: __init__.py  app.py  codes.py  http_routes.py  messages.py  rooms.py  session.py  ws_routes.py
canastra/web/static/: index.html
tests/: test_helpers.py  test_smoke.py
tests/cli/: test_loop.py  test_main_module.py  test_prompts.py  test_render.py  test_scaffold.py  test_setup.py
tests/domain/: test_cards.py  test_rules.py  test_scoring.py
tests/engine/: conftest.py  test_actions.py  test_audience.py  test_chin.py  test_deck_exhaust.py  test_replay.py  test_scoring.py  test_setup.py  test_smoke.py  test_state.py  test_timer.py  test_view_for.py
tests/web/: test_app_factory.py  test_backpressure.py  test_codes.py  test_concurrency.py  test_http.py  test_lobby_grace.py  test_messages.py  test_messages_fuzz.py  test_messages_property.py  test_reconnect.py  test_replay_determinism.py  test_rooms.py  test_session.py  test_shutdown.py  test_smoke.py  test_team_assignment.py  test_timer.py  test_ws_adversarial.py  test_ws_happy.py  test_ws_races.py
